--- a/data/explanations/04.md
+++ b/data/explanations/04.md
@@ -31,10 +31,37 @@ y = 0 | 0   1   2   3   4
 7. Return the vector with presences, as well as width and height which we need for calculating indices at later points.
 
 ## Neighbor calculation
-TODO
+The core of both part 1 and part 2 of the puzzle revolves around checking how many slots adjacent to
+a given position are occupied. For this I simply iterate over all occupied slots (there is no point
+in checking empty slots) and then for those iterating over every adjacent slot (8 in total).
+
+The `neighbors()` function takes the current coordinates and grid stats (for index calculations)
+and then uses `NEIGHBOR_OFFSETS` to find the positions (and thus indices) of adjacent slots.
+
+Then, we eliminate the ones that exceed the grind boundaries before running the supplied
+function on the remaining options.
+
+The reason for the closure instead of passing back a list of neighbors is that this way we
+don't need to allocate a vector for the result, nor context switch into and out of the function.
 
 ## Part 1
-TODO
+Part 1 revolves around calculating how many slots have fewer than four occupied slots around them.
+
+This is done by iterating over all slots (occupied or not) and calculating how many neighbors they have
+if they themselves are occupied (we don't care about neighbors of empty slots). 
+
+So inside the loop for the grid, we run the `neighbors()` function and simply increment neighbor count every
+time one of the neighbor slots is occupied. Then, if neighbor count is less than 4, we increment
+the number of accessible slots.
 
 ## Part 2
-TODO
+In part 2 we continue calculating accessible slots and emptying them until in the end we have no more
+accessible slots. The first difference with part 1 is that instead of simply counting the number
+of available slots, we store the number of neighbors per occupied slot. Additionally, if any of
+the checked slots already has fewer than 4 neighbors, we immediately add it to the removal queue.
+
+Next, we iterate over a loop so long as the removal queue is longer than the number of removed elements.
+
+For ever iteration, we take the next item in the queue, check if it's occupied (if not we can short circuit)
+and if so, we empty it. Then, we go over its neighbors and decrement each of their neighbor counts by one
+(because we just removed one of them). If the neighbor count is now less than 4, we add it to the removal queue.
